src/index.css
/* ... */
.footer .btn_start h4 {
    position: relative;
    font-size: 13px;
    top: 1px;
    left: 1px;
}

.footer .time {
    display: flex;
    position: absolute;
    height: 28px;
    justify-content: space-around;
    align-items: center;
    right: 4px;
    gap: 0px;
    box-shadow: inset 1px 1px #000, 1px 1px #ffffffdd;
}

.footer .icon_time_container {
    display: flex;
    width: fit-content;
    height: 100%;
    align-items: center;
    padding: 0px 2px;

}

.icon_time_container img {
    width: 18px;
    position: relative;
    cursor: pointer;
    z-index: 2;
}

.footer .time .p_time_div {
    position: relative;
    top: 1px;
    padding: 0px 3px;
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

}

.footer .time p {
    position: relative;
    font-size: 11px;
    letter-spacing: .7px;
    white-space: nowrap;
    top: 0.5px;
}

.footer .start_popup {
    display: grid;
    grid-template-columns: 26px minmax(0, 1fr);
    position: absolute;
    width: 240px;
    bottom: 30.5px;
    left: 2px;
    background: #c5c2c2;
    border: 2px solid #f5f2f2;
    border-top: 3px solid #f5f2f2;
    border-left: 3px solid #f5f2f2;
    border-bottom-color: #1e1d1d;
    border-right-color: #1e1d1d;
    max-height: min(72vh, 620px);
    overflow-y: auto;
    overflow-x: hidden;
    scrollbar-gutter: stable;
    align-items: stretch;
    z-index: 1000000000;
}


.start_popup div {
    display: flex;
    width: 100%;
    min-height: 34px;
    height: auto;
    align-items: center;
    gap: .55rem;
    padding: 6px 8px;
    cursor: default;
    z-index: 2;
}

.start_popup div:not(.sidebar_popup) {
    grid-column: 2;
}

.start_popup div:not(.sidebar_popup):not(.sub_start_container):hover {
    background: #040d91;
    color: white;
}

.start_popup div:not(.sidebar_popup):not(.sub_start_container):hover>span::before {
    border-color: white;
}

.start_popup img {
    width: 20px;
    height: 20px;
    object-fit: contain;
    flex-shrink: 0;
}

.start_popup span {
    font-size: 12px;
    line-height: 1.1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.start_popup span::before {
    content: none;
}

@supports (-webkit-touch-callout: none) {
    .start_popup span::before {
        content: none;
    }
}

.start_popup .sidebar_popup {
    grid-column: 1;
    grid-row: 1 / -1;
    background: #7b7d7b;
    position: sticky;
    top: 0;
    align-self: stretch;
    width: 25px;
    cursor: default;
    z-index: 3;
}

.sidebar_popup img {
    position: relative;
    height: 140px;
    align-self: end;
    right: 9px;
}

.footer .start_popup p {
    position: absolute;
    font-size: 9px;
    color: #171414;
    right: .3rem;
    margin-top: 3px;
}

.footer .start_popup div:hover>p {
    color: white;
}

.footer .start_popup .msdos span {
    white-space: nowrap;
}

.sub_start_container {
    display: flex;
    position: absolute;
    flex-direction: column;
    width: 140px !important;
    max-height: 244px;
    height: fit-content !important;
    background: red;
    gap: 0 !important;
    padding: 2px 0px !important;
    left: 10.8rem;
    top: -1px;
    background: #bdb9b9;
    border: 1px solid #141414;
    border-top-color: white;
    border-left-color: white;
    box-shadow: inset 0px 1px #ffffffdd, 0px 1px #464444;
    overflow-y: auto;
}

.sub_start_container::-webkit-scrollbar {
    width: 0px;
    height: 0px;
}


.sub_start_container .icon_sub_start {
    display: flex;
    position: relative;
    width: 99%;
    height: fit-content !important;
    padding: 2px 4px;
    gap: 9px;
}

.sub_start_container .icon_sub_start img {
    position: relative;
    width: 18px;
    height: 18px;
}

.sub_start_container .icon_sub_start p {
    position: relative;
    font-size: 13px;
}



/* .start_popup .resume {
    border-bottom: 1px groove rgb(120, 119, 119);
}

@supports (-webkit-touch-callout: none) {
    .start_popup .resume {
        border-bottom: .5px groove rgb(120, 119, 119);
    }
} */

.start_popup .groove {
    grid-column: 2;
    width: calc(100% - 12px);
    min-height: 2px;
    margin: 2px 6px;
    padding: 0;
    border-top: 2px groove #efefef;
}

.shortcut_container {
    display: flex;
    align-items: center;
    justify-content: center;
}


.tap_container {
    display: flex;
    position: relative;
    padding-right: 2px;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    margin-left: 4px;
    gap: 4px;
    overflow-x: scroll;
    overflow-y: hidden;
    scrollbar-width: none;
    -ms-overflow-style: none;

}

.tap_container::-webkit-scrollbar {
    display: none;
}

.start_tap {
    display: flex;
    position: relative;
    align-items: center;
    gap: 4px;
    height: 26px;
    max-width: 180px;
    min-width: 30px;
    width: 200px;
    padding: 0px 8px;
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    overflow: hidden;

}

.start_tap p {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

@media screen and (width <=800px) {
    .start_tap {
        max-width: 140px;
    }
}

@media screen and (width <=500px) {
    .start_tap {
        max-width: 80px;
    }
}


.start_tap img {
    position: relative;
    width: 15px;
}

.start_tap p {
    position: relative;
    top: 1px;
    font-size: 13px;
    white-space: nowrap;
}

.start_popup .winamp img {
    transform: scale(1.65);
}

/* ------------ ICON SIZE ---------------------- */

.icon_size_container {
    display: grid;
    position: absolute;
    width: 110px;
    right: 4.5rem;
    bottom: 1.6rem;
    place-items: center;
    background: #c5c2c2;
    border: 2px solid white;
    border-bottom-color: black;
    border-right-color: black;
    z-index: 999999999;
}
/* ... */

